# treepeople

./: .gitignore  Cargo.toml  DESIGN.md  README.md  package-lock.json  package.json
dnas/treepeople/workdir/: dna.yaml
dnas/treepeople/zomes/coordinator/treepeople/: Cargo.toml
dnas/treepeople/zomes/coordinator/treepeople/src/: all_trees.rs  lib.rs  tree.rs
dnas/treepeople/zomes/coordinator/treepeople/tests/: all_trees.rs  tree.rs
dnas/treepeople/zomes/coordinator/treepeople/tests/common/: mod.rs
dnas/treepeople/zomes/integrity/treepeople/: Cargo.toml
dnas/treepeople/zomes/integrity/treepeople/src/: lib.rs  tree.rs
ui/: index.html  package.json
ui/src/: holochain-app.ts
ui/src/treepeople/treepeople/: context.ts  treepeople-client.ts  treepeople-store.ts  types.ts
ui/src/treepeople/treepeople/elements/: all-trees.ts  create-tree.ts  edit-tree.ts  tree-detail.ts  tree-summary.ts
workdir/: happ.yaml  web-happ.yaml
