[profile.dev]
opt-level = "z"

[profile.release]
opt-level = "z"

[workspace]
members = ["dnas/*/zomes/coordinator/*", "dnas/*/zomes/integrity/*"]
resolver = "2"

[workspace.dependencies]
hdi = "=0.2.3"
hdk = "=0.1.3"
holochain = "0.1.5"
serde = "=1.0.166"

[workspace.dependencies.profiles]
path = "dnas/treepeople/zomes/coordinator/profiles"

[workspace.dependencies.profiles_integrity]
path = "dnas/treepeople/zomes/integrity/profiles"

[workspace.dependencies.treepeople]
path = "dnas/treepeople/zomes/coordinator/treepeople"

[workspace.dependencies.treepeople_integrity]
path = "dnas/treepeople/zomes/integrity/treepeople"
